Fix static array packing bug